--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,12 +9,15 @@
         android:layout_weight="1"
         android:layout_height="0dp"
         android:layout_margin="4dp"
+        android:id="@+id/infoBoardLayout"
         android:background="@color/colorRowBackgroundGrey"
         android:orientation="horizontal">
     </LinearLayout>
     <LinearLayout android:layout_height="0dp"
         android:layout_width="match_parent"
         android:layout_weight="7"
+        android:layout_margin="4dp"
+        android:background="@color/colorRowBackgroundGrey"
         android:id="@+id/gameContainerLinearLayout"
         android:orientation="vertical">
     </LinearLayout>
