--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -17,44 +17,48 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="vertical">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="20sp"
-                android:text=" @ "
+                android:text="At"
+                android:fontFamily="@font/kid_kosmic"
+                android:layout_gravity="center"
                 android:textStyle="bold"
-                android:paddingTop="6dp"
+                android:visibility="gone"
+                android:layout_margin="8dp"
+                android:id="@+id/atTextView"
                 android:textColor="@android:color/black"/>
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_acm_mait"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:text=" Acm-MAIT "
-                android:fontFamily="@font/paddington_bold"
-                android:layout_marginRight="10dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_margin="8dp"
+                android:visibility="gone"
                 android:layout_gravity="center"
-                android:textColor="@android:color/black"/>
+                android:id="@+id/logoImageView"
+                android:src="@drawable/ic_acm_mait"/>
         </LinearLayout>
 
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/splashAnimationView"
             android:layout_width="200dp"
             android:layout_height="200dp"
-            android:layout_margin="32dp"
+            android:layout_margin="8dp"
+            android:layout_gravity="center"
             app:lottie_fileName="splash_anim.json"
             app:lottie_loop="true" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="15sp"
-            android:fontFamily="@font/paddington_bold"
-            android:text="We strongly belive in turning coffee to code"
+            android:textSize="20sp"
+            android:layout_margin="8dp"
+            android:textAlignment="center"
+            android:fontFamily="@font/kid_kosmic"
+            android:id="@+id/quoteTextView"
+            android:visibility="gone"
+            android:text="We strongly belive Coffee is neccessary for Debugging"
             android:textColor="@android:color/black" />
     </LinearLayout>
 
