--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -18,43 +18,6 @@
         android:weightSum="1"
         android:id="@+id/scoreContainerLayout">
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_weight="0.21"
-            android:layout_height="wrap_content"
-            android:layout_margin="2dp"
-            android:text="SCORE"
-            android:textAlignment="gravity"
-            android:fontFamily="@font/kid_kosmic"
-            android:textColor="@android:color/holo_red_light"
-            android:id="@+id/scoreAnimationView"/>
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_marginTop="4dp"
-            android:layout_marginBottom="4dp"
-            android:layout_marginRight="2dp"
-            android:layout_marginLeft="2dp"
-            android:id="@+id/scoreTextView"
-            android:layout_weight="0.15"
-            android:text="0"
-            android:fontFamily="@font/digiface_regular"
-            android:padding="8dp"
-            android:textSize="25sp"
-            android:textAlignment="center"
-            android:textColor="@android:color/holo_red_light"
-            android:background="@drawable/score_text_view_background"/>
-
-        <com.airbnb.lottie.LottieAnimationView
-            android:layout_width="0dp"
-            android:layout_weight="0.2"
-            android:layout_margin="4dp"
-            android:layout_height="match_parent"
-            android:id="@+id/emojiAnimationView"
-            app:lottie_loop="true"
-            app:lottie_fileName="gen_anim.json"/>
-
         <com.airbnb.lottie.LottieAnimationView
             android:layout_width="0dp"
             android:layout_weight="0.2"
@@ -64,13 +27,42 @@
             app:lottie_loop="true"
             app:lottie_fileName="time_anim.json"/>
 
-        <TextView
+        <Chronometer
             android:layout_width="0dp"
             android:layout_weight="0.2"
-            android:layout_margin="2dp"
+            android:fontFamily="@font/digiface_regular"
+            android:textColor="@android:color/holo_red_light"
+            android:textSize="20sp"
+            android:textAlignment="center"
+            android:id="@+id/timeKeeperChronometer"
+            android:layout_height="match_parent"
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="4dp"
+            android:layout_marginRight="2dp"
+            android:paddingTop="8dp"
+            android:layout_marginLeft="2dp"
+            android:background="@drawable/score_text_view_background"/>
+
+
+        <com.airbnb.lottie.LottieAnimationView
+            android:layout_width="0dp"
+            android:layout_weight="0.2"
+            android:layout_margin="4dp"
+            android:layout_height="match_parent"
+            android:id="@+id/emojiAnimationView"
+            app:lottie_loop="true"
+            android:layout_gravity="center"
+            app:lottie_fileName="gen_anim.json"/>
+
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_weight="0.4"
+            android:layout_margin="4dp"
             android:layout_height="wrap_content"
-            android:text="help?"
-            android:paddingTop="4dp"
+            android:text="MORE OPTIONS"
+            android:textAlignment="center"
+            android:textSize="16sp"
             android:fontFamily="@font/kid_kosmic"
             android:textColor="@android:color/holo_red_light"
             android:id="@+id/flagsTextView"/>
