--- a/app/src/main/res/layout/win_dialog.xml
+++ b/app/src/main/res/layout/win_dialog.xml
@@ -7,14 +7,6 @@
     android:orientation="vertical"
     android:background="@android:color/white">
 
-    <com.airbnb.lottie.LottieAnimationView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_margin="8dp"
-        android:layout_gravity="center"
-        app:lottie_fileName="win_anim.json"
-        android:id="@+id/winAnimationView"
-        app:lottie_loop="true"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -33,6 +25,7 @@
         android:layout_margin="8dp"
         android:id="@+id/nameEditText"
         android:hint="Enter your Name"
+        android:inputType="textPersonName"
         android:textColorHint="@android:color/black"
         android:textColor="@android:color/black"
         android:fontFamily="@font/digiface_regular"
