--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -60,7 +60,7 @@
             android:layout_weight="0.4"
             android:layout_margin="4dp"
             android:layout_height="wrap_content"
-            android:text="MORE OPTIONS"
+            android:text="HIGH SCORES"
             android:textAlignment="center"
             android:textSize="16sp"
             android:fontFamily="@font/kid_kosmic"
