--- a/app/src/main/res/layout/activity_scores.xml
+++ b/app/src/main/res/layout/activity_scores.xml
@@ -32,7 +32,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:id="@+id/scoreListLinearLayout">
 
         <TextView
             android:layout_width="match_parent"
@@ -57,8 +58,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/scoreRecyclerView"
-            android:layout_margin="8dp"
-            >
+            android:layout_margin="8dp">
         </android.support.v7.widget.RecyclerView>
 
 
